tests/bad/func/invalid_param.oc
/// fail: Couldn't find this identifier: Foo

def foo(x: Foo) {  }